# TocDaemon

./: CMakeLists.txt  README.md  TocDaemonClient.h  TocDaemonProcess.cpp  TocDaemonServer.cpp  TocDaemonServer.h  logger.cpp  logger.h
Heartbeat/: TocHeartbeat.cpp  TocHeartbeat.h
videoprism/colabs/: videoprism_video_encoder_demo.ipynb
